[tool.poetry]
name = "test-github-action"
version = "0.1.0"
description = ""
authors = ["Haffi Mazhar <haffimazhar96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
pydantic = "^1.10.6"
starlette-admin = "^0.6.0"
Flask = "^2.2.3"
SQLAlchemy = "2.0.1"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.256"
pytest = "^7.2.2"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
