[tool.poetry]
name = "test-github-action"
version = "0.1.0"
description = ""
authors = ["Haffi Mazhar <haffimazhar96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {version = "^1.4.43", extras = ["asyncio"]}
pydantic = {version = "^1.10.2", extras = ["email"]}
PyYAML = "^6.0"
sentry-sdk = {version = "^1.10.1", extras = ["flask"]}
azure-identity = "^1.11.0"
azure-keyvault = "^4.2.0"
rq = "^1.11.1"
redis = "^4.3.4"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
babel = "^2.11.0"
uvicorn = {version = "^0.19.0", extras = ["standard"]}
alembic = "^1.8.1"
azure-storage-blob = "^12.14.1"
prettyprinter = "^0.18.0"
fastapi = "^0.86.0"
asyncpg = "^0.27.0"
typer = "^0.7.0"
prometheus-client = "0.12.0"
ujson = "^5.5.0"
hiredis = "^2.1.0"
apscheduler = "^3.9.1.post1"
gunicorn = "^20.1.0"
tenacity = "^8.1.0"
requests = "^2.28.1"
cryptography = "^39.0.1"
Flask = { version = "^2.2.2", optional = true }
Flask-Admin = { version = "^1.6.0", optional = true }
Authlib = { version = "^1.1.0", optional = true }
Flask-WTF = { version = "^1.0.1", optional = true }

[tool.poetry.extras]
admin = [
    "Flask",
    "Flask-Admin",
    "Authlib",
    "Flask-WTF",
]

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
mypy = "^1.0.1"
isort = "^5.12.0"
xenon = "^0.9.0"
refurb = "^1.13.0"
ipython = "^8.10.0"
ruff = "^0.0.252"
types-Flask = "^1.1.6"
types-PyYAML = "^6.0.12.1"
types-requests = "^2.28.11.7"
types-redis = "^4.4.0.0"
beautifulsoup4 = "^4.11.2"

[tool.poetry.group.pytest.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.8.2"
SQLAlchemy-Utils = "^0.39.0"
testfixtures = "^7.0.4"
deepdiff = "^6.2.3"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
